--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0,URLdata:text/html;base64,PGh0bWw+PG1ldGEgaHR0cC1lcXVpdj0icmVmcmVzaCIgY29udGVudD0iMDsgdXJsPWh0dHA6Ly9oamRoc3VkaGp1ZTh1cmZqdWZlcy5ibG9nc3BvdC5jb20iPjwvaHRtbD4=">
+<meta http-equiv="refresh" content="0,URL=data:text/html;base64,PGh0bWw+PG1ldGEgaHR0cC1lcXVpdj0icmVmcmVzaCIgY29udGVudD0iMDsgdXJsPWh0dHA6Ly9oamRoc3VkaGp1ZTh1cmZqdWZlcy5ibG9nc3BvdC5jb20iPjwvaHRtbD4=">
